bk_ida/gccida/g0/noce_try_store_flag_constants
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_store_flag_constants/src/ifcvt.c:1119:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+30h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_store_flag_constants/src/ifcvt.c:1192:40: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
targeta = expand_simple_binop( mode, ( rtx_code)v5, v4, target, x, 0, OPTAB_WIDEN); 
                                       ^~~~~~~~
                                       rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_store_flag_constants/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_store_flag_constants/src/ifcvt.c:1192:49: error: expected ')'
targeta = expand_simple_binop( mode, ( rtx_code)v5, v4, target, x, 0, OPTAB_WIDEN); 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_store_flag_constants/src/ifcvt.c:1192:30: note: to match this '('
targeta = expand_simple_binop( mode, ( rtx_code)v5, v4, target, x, 0, OPTAB_WIDEN); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_store_flag_constants/src/obj/ifcvt.o] Error 1
